--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
         <div class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#about">Project</a></li>
                 <li><a href="organisasi.html#organisasi">Profil Ubig</a></li>
                 <li><a href="#team">Team</a></li>
+                <li><a href="#pesanDanKesan">Pesan & Kesan</a></li>
                 <li><a href="#contact">Informasi</a></li>
                 <!-- <button id="toggle-button">Toggle Dark Mode</button> -->
                 <a id="toggle-button" class="btn"><i class="fas fa-moon"></i></a>
@@ -493,6 +494,7 @@
             }
         });
     </script>
+
 
     <!-- <script>
         document.getElementById('toggle-button').addEventListener('click', function () {
