--- a/aris.html
+++ b/aris.html
@@ -39,8 +39,9 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#about">Project</a></li>
-                <li><a href="organisasi.html">Profil Ubig</a></li>
+                <li><a href="organisasi.html#organisasi">Profil Ubig</a></li>
                 <li><a href="index.html#team">Team</a></li>
+                <li><a href="index.html#pesanDanKesan">Pesan & Kesan</a></li>
                 <li><a href="index.html#contact">Informasi</a></li>
                 <!-- <button id="toggle-button">Toggle Dark Mode</button> -->
                 <a id="toggle-button" class="btn"><i class="fas fa-moon"></i></a>
