--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">Project</a></li>
+                <li><a href="#kegiatan">Kegiatan</a></li>
                 <li><a href="organisasi.html#organisasi">Profil Ubig</a></li>
                 <li><a href="#team">Team</a></li>
                 <li><a href="#pesanDanKesan">Pesan & Kesan</a></li>
-                <li><a href="#contact">Informasi</a></li>
+                <!-- <li><a href="#contact">Informasi</a></li> -->
                 <!-- <button id="toggle-button">Toggle Dark Mode</button> -->
                 <a id="toggle-button" class="btn"><i class="fas fa-moon"></i></a>
                 <!-- <a href=""><i class="ri-moon-line change-theme" id="toggle-button"></i></a> -->
@@ -224,7 +225,7 @@
             </div>
         </div>
     </div> -->
-
+    <section id="kegiatan"></section>
     <div class="clients mt-100">
         <div class="container">
             <div class="section-header">
