--- a/mentahan.html
+++ b/mentahan.html
@@ -35,9 +35,10 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#about">Project</a></li>
+                <li><a href="index.html#kegiatan">Kegiatan</a></li>
                 <li><a href="organisasi.html#organisasi">Profil Ubig</a></li>
                 <li><a href="index.html#team">Team</a></li>
-                <li><a href="index.html#contact">Informasi</a></li>
+                <!-- <li><a href="index.html#contact">Informasi</a></li> -->
                 <!-- <button id="toggle-button">Toggle Dark Mode</button> -->
                 <a id="toggle-button" class="btn"><i class="fas fa-moon"></i></a>
                 <!-- <a href=""><i class="ri-moon-line change-theme" id="toggle-button"></i></a> -->
