--- a/keysa.html
+++ b/keysa.html
@@ -33,6 +33,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#about">Project</a></li>
+                <li><a href="index.html#kegiatan">Kegiatan</a></li>
                 <li><a href="organisasi.html#organisasi">Profil Ubig</a></li>
                 <li><a href="index.html#team">Team</a></li>
                 <li><a href="index.html#pesanDanKesan">Pesan & Kesan</a></li>
