Laporan-PKL-Bang

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <img src="./images/prestasi-aris.jpg" alt="" class="myImg">
                 <img src="./images/laporan1.jpg" alt="" class="myImg">
                 <img src="./images/laporan2.jpg" alt="" class="myImg">
-                <img src="./images/image.png" alt="" class="myImg">
+                <img src="./images/laporan-tele.png" alt="" class="myImg">
             </div>
             <div class="container" style="padding-top: 25px;">
                 <a href="selengkapnya.html"
