--- a/aris.html
+++ b/aris.html
@@ -19,14 +19,30 @@
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <script src="./js/main.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <style>
-        body.dark-mode .container img {
-            box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
+        .carousel-item img {
+            width: 90%;
+            /* Adjust the width as needed */
+            height: auto;
+            border-radius: 15px;
+            /* Makes the corners rounded */
+            margin: 0 auto;
+            /* Centers the image horizontally */
+        }
+
+        .carousel {
+            box-shadow: 0 0 25px rgba(0, 0, 0, 0.9);
+        }
+
+        .small-carousel .carousel-item img {
+            width: 70%;
+            /* Adjust the width to make the second carousel smaller */
         }
     </style>
 </head>
@@ -37,12 +53,12 @@
         <div class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#about">Project</a></li>
-                <li><a href="index.html#kegiatan">Kegiatan</a></li>
-                <li><a href="organisasi.html#organisasi">Profil Ubig</a></li>
-                <li><a href="index.html#team">Team</a></li>
-                <li><a href="index.html#pesanDanKesan">Pesan & Kesan</a></li>
+                <li><a style="text-decoration: none;" href="index.html">Home</a></li>
+                <li><a style="text-decoration: none;" href="index.html#about">Project</a></li>
+                <li><a style="text-decoration: none;" href="index.html#kegiatan">Kegiatan</a></li>
+                <li><a style="text-decoration: none;" href="organisasi.html#organisasi">Profil Ubig</a></li>
+                <li><a style="text-decoration: none;" href="index.html#team">Team</a></li>
+                <li><a style="text-decoration: none;" href="index.html#pesanDanKesan">Pesan & Kesan</a></li>
                 <!-- <li><a href="index.html#contact">Informasi</a></li> -->
                 <!-- <button id="toggle-button">Toggle Dark Mode</button> -->
                 <a id="toggle-button" class="btn"><i class="fas fa-moon"></i></a>
@@ -76,26 +92,184 @@
 
     <div class="container" style="padding-top: 10rem;">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6" style="padding-top: 7rem;">
                 <h2 style="text-align: center;">Botpress Cloud</h2>
                 <h4 style="padding-top: 2rem; text-align: left;">Saya Mengerjakan Dan Sekaligus Belajar Botpress Cloud
+                    Dan Saya
                 </h4>
-                <h4 style="padding-top: 1rem; text-align: left;">Dan Saya Membuat Bot Di Botpress Cloud Yaitu Bot Movie,
+                <h4 style="padding-top: 1rem; text-align: left;">Membuat Bot Di Botpress Cloud Yaitu Bot Movie, Bot
+                    Pelanggaran Siswa,
                 </h4>
-                <h4 style="padding-top: 1rem; text-align: left;">Bot Pelanggaran Siswa, Bot BPJS, Bot Quiz Login Dengan
-                    OTP, </h4>
-                <h4 style="padding-top: 1rem; text-align: left;">Dan Bot Laporan Masyarakat</h4>
+                <h4 style="padding-top: 1rem; text-align: left;"> Bot BPJS, Bot Quiz Login Dengan
+                    OTP, Dan Bot Laporan Masyarakat</h4>
+                <!-- <h4 style="padding-top: 1rem; text-align: left;"></h4> -->
             </div>
             <div class="col-md-6">
-                <div class="image">
-                    <img src="./images/bot1.jpg" style="width: 100%; height: auto; border-radius: 2rem;" alt="">
-                    <!-- <img src="./images/bot2.jpg" alt=""> -->
+                <div id="carouselExampleIndicators1" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="4"
+                            aria-label="Slide 5"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./images/bot1.jpg" class="d-block" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/bot2.jpg" class="d-block" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/bot3.jpg" class="d-block" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/bot4.jpg" class="d-block" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/bot5.jpg" class="d-block" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators1"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators1"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
             </div>
         </div>
     </div>
 
+    <div class="container" style="padding-top: 10rem;">
+        <div class="row">
+            <div class="col-md-6">
+                <div id="carouselExampleIndicators2" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="4"
+                            aria-label="Slide 5"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./images/django pelangaran siswa.png" class="d-block" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/django1.jpg" class="d-block" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/django2.jpg" class="d-block" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/django3.jpg" class="d-block" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators2"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-6" style="padding-top: 3rem;">
+                <h2 style="text-align: center;">Django Pelanggaran Siswa</h2>
+                <h4 style="padding-top: 2rem; text-align: left;">Proyek Django ini mencatat pelanggaran siswa dan
+                    mengirim notifikasi</h4>
+                <h4 style="padding-top: 1rem; text-align: left;">otomatis melalui email dan WhatsApp
+                    menggunakan API Nobox. </h4>
+                <h4 style="padding-top: 1rem; text-align: left;">Aplikasi ini mendukung banyak sekolah dengan
+                    penginputan</h4>
+                <h4 style="padding-top: 1rem; text-align: left;"> pelanggaran oleh guru, memastikan komunikasi yang
+                    cepat dan efektif </h4>
+                <h4 style="padding-top: 1rem; text-align: left;">dengan wali siswa.</h4>
+            </div>
+        </div>
+    </div>
 
+    <div class="container" style="padding-top: 10rem;">
+        <div class="row">
+            <div class="col-md-6" style="padding-top: 5rem;">
+                <h2 style="text-align: center;">React Js Pelanggaran Siswa</h2>
+                <h4 style="padding-top: 2rem;">Frontend proyek ini dibangun dengan React JS dan terhubung dengan </h4>
+                <h4 style="padding-top: 1rem;"> API Django untuk manajemen pelanggaran siswa. Aplikasi ini</h4>
+                <h4 style="padding-top: 1rem;"> menyediakan menu siswa, kategori, dan pelanggaran, memungkinkan </h4>
+                <h4 style="padding-top: 1rem;">pengguna untuk mengelola data pelanggaran siswa secara efisien di</h4>
+                <h4 style="padding-top: 1rem;">sekolah yang menggunakan aplikasi ini.</h4>
+            </div>
+            <div class="col-md-6" style="display: flex; justify-content: center; align-items: center;">
+                <img src="./images/react1.jpg" style="width: 53rem; border-radius: 3rem;" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div class="container" style="padding-top: 10rem;">
+        <div class="row">
+            <div class="col-md-6">
+                <div id="carouselExampleIndicators2" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="4"
+                            aria-label="Slide 5"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./images/django pelangaran siswa.png" class="d-block" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/django1.jpg" class="d-block" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/django2.jpg" class="d-block" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/django3.jpg" class="d-block" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators2"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 
     <script>
         function toggleDarkMode() {
