--- a/aris.html
+++ b/aris.html
@@ -226,39 +226,47 @@
     <div class="container" style="padding-top: 10rem;">
         <div class="row">
             <div class="col-md-6">
-                <div id="carouselExampleIndicators2" class="carousel slide" data-bs-ride="carousel">
+                <div id="carouselExampleIndicators3" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0"
+                        <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="0"
                             class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="1"
+                        <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="1"
                             aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="2"
+                        <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="2"
                             aria-label="Slide 3"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="3"
+                        <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="3"
                             aria-label="Slide 4"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="4"
+                        <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="4"
                             aria-label="Slide 5"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="5"
+                            aria-label="Slide 6"></button>
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./images/django pelangaran siswa.png" class="d-block" alt="...">
+                            <img src="./images/frappe-bench.png" class="d-block" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./images/django1.jpg" class="d-block" alt="...">
+                            <img src="./images/frappe1.jpg" class="d-block" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./images/django2.jpg" class="d-block" alt="...">
+                            <img src="./images/frappe2.png" class="d-block" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="./images/django3.jpg" class="d-block" alt="...">
+                            <img src="./images/frappe4.jpg" class="d-block" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/frappe3.png" class="d-block" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/frappe5.jpg" class="d-block" alt="...">
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2"
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators3"
                         data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators2"
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators3"
                         data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
