--- a/aris.html
+++ b/aris.html
@@ -36,13 +36,26 @@
             /* Centers the image horizontally */
         }
 
-        .carousel {
+        /* .carousel {
             box-shadow: 0 0 25px rgba(0, 0, 0, 0.9);
+        } */
+
+        /* .small-carousel .carousel-item img {
+            width: 90%;
+            /* Adjust the width to make the second carousel smaller */
+        /* } */ 
+
+        .text {
+            font-size: 15px;
+            /* Ukuran font header */
+            font-weight: bold;
+            /* Tebal font header */
+            padding-top: 1rem;
         }
 
-        .small-carousel .carousel-item img {
-            width: 70%;
-            /* Adjust the width to make the second carousel smaller */
+        .description {
+            margin-left: 20px;
+            /* Jarak menjorok ke dalam */
         }
     </style>
 </head>
@@ -223,7 +236,7 @@
         </div>
     </div>
 
-    <div class="container" style="padding-top: 10rem;">
+    <div class="container" style="padding-top: 10rem; padding-bottom: 10rem;">
         <div class="row">
             <div class="col-md-6">
                 <div id="carouselExampleIndicators3" class="carousel slide" data-bs-ride="carousel">
@@ -271,6 +284,26 @@
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                     </button>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h2 style="text-align: center;">Frappe Framework</h2>
+                <h4 class="text">Tes Magang Ubig</h4>
+                <div class="description">
+                    <h4>Aplikasi Ini Memfasilitasi Pengelolaan Tes Magang Dengan Fitur </h4>
+                    <h4>Seperti Pengaturan Kota Dan Manajemen Data Siswa.</h4>
+                    <!-- <h4></h4> -->
+                </div>
+                <h4 class="text">Education</h4>
+                <div class="description">
+                    <h4>Aplikasi ini mendukung manajemen sekolah, termasuk pengelolaan</h4>
+                    <h4>data siswa, kurikulum, dan penilaian.</h4>
+                </div>
+                <h4 class="text">LMS</h4>
+                <div class="description">
+                    <h4>Platform ini menyediakan pengelolaan pembelajaran, mencakup </h4>
+                    <h4>pendaftaran kursus, penyampaian materi, serta evaluasi dan </h4>
+                    <h4>penilaian.</h4>
                 </div>
             </div>
         </div>
