--- a/aris.html
+++ b/aris.html
@@ -67,7 +67,7 @@
         <nav class="navbar">
             <ul>
                 <li><a style="text-decoration: none;" href="index.html">Home</a></li>
-                <li><a style="text-decoration: none;" href="index.html#about">Project</a></li>
+                <li><a style="text-decoration: none;" href="index.html#prod">Project</a></li>
                 <li><a style="text-decoration: none;" href="index.html#kegiatan">Kegiatan</a></li>
                 <li><a style="text-decoration: none;" href="organisasi.html#organisasi">Profil Ubig</a></li>
                 <li><a style="text-decoration: none;" href="index.html#team">Team</a></li>
