--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <nav class="navbar">
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">Project</a></li>
+                <li><a href="#prod">Project</a></li>
                 <li><a href="#kegiatan">Kegiatan</a></li>
                 <li><a href="organisasi.html#organisasi">Profil Ubig</a></li>
                 <li><a href="#team">Team</a></li>
@@ -87,7 +87,7 @@
                         Lebih Detail Nya Silahkan Klik Nama Kami Di Bawah
                     </p>
                 </div>
-
+                <section id="prod"></section>
                 <a data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="2000"
                     href="aris.html#aris" style="text-decoration: none;" class=" card-1 col-md-3 col-sm-4">
 
