--- a/organisasi.html
+++ b/organisasi.html
@@ -141,7 +141,7 @@ body.dark-mode .container .row .image img */
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="index.html#about">Project</a></li>
+        <li><a href="index.html#prod">Project</a></li>
         <li><a href="index.html#kegiatan">Kegiatan</a></li>
         <!-- <li><a href="organisasi.html">Organisasi</a></li> -->
         <li><a href="index.html#team">Team</a></li>
