--- a/keysa.html
+++ b/keysa.html
@@ -32,7 +32,7 @@
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#about">Project</a></li>
+                <li><a href="index.html#prod">Project</a></li>
                 <li><a href="index.html#kegiatan">Kegiatan</a></li>
                 <li><a href="organisasi.html#organisasi">Profil Ubig</a></li>
                 <li><a href="index.html#team">Team</a></li>
