--- a/selengkapnya.html
+++ b/selengkapnya.html
@@ -95,7 +95,7 @@
 
     <header class="header">
         <a href="index.html" class="logo"><img src="./images/ubig.png" alt=""></a>
-        <div class="fas fa-bars"></div>
+        <div class="fas fa-bars nav-toggle"></div>
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -248,6 +248,19 @@
         </div>
     </div>
 
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const navToggle = document.querySelector('.nav-toggle');
+            const navbar = document.querySelector('.navbar');
+
+            navToggle.addEventListener('click', function () {
+                navbar.classList.toggle('nav-active');
+                navToggle.classList.toggle('fa-bars');
+                navToggle.classList.toggle('fa-times');
+            });
+        });
+    </script>
+
 
     <script>
         // Get the modal
@@ -286,6 +299,8 @@
                 modalImg.style.maxWidth = (window.innerWidth - 40) + "px"; // Sesuaikan max-width dengan padding modal
             };
         });
+
+
 
 
     </script>
